# copilot-functions

./: .gitignore  README.md  azure.yaml  pyproject.toml
.github/workflows/: release.yml
infra/: main.bicep  main.parameters.json
infra/app/: api.bicep  storage-PrivateEndpoint.bicep
infra/assets/: extra-requirements.txt  function_app.py
infra/assets/copilot_shim/: __init__.py  arm.py  connector_tool_cache.py  connector_tools.py  connectors.py  runner.py
infra/hooks/: prepackage.ps1
samples/: README.md
samples/basic-chat/: README.md
samples/basic-chat/infra/: main.bicep  main.parameters.json
samples/basic-chat/infra/app/: session-pool-rbac.bicep  session-pool.bicep
samples/basic-chat/src/: local.settings.template.json  requirements.txt
samples/daily-azure-report/: README.md
samples/daily-azure-report/src/: local.settings.template.json  requirements.txt  resource_summary.agent.md
samples/daily-tech-news-email/: README.md
samples/daily-tech-news-email/src/: local.settings.template.json  requirements.txt
src/: .funcignore  AGENT.old.md  AGENTS.md  function_app.py  local.settings.sample.json  requirements.txt
src/azure_functions_agents/public/: index.html
src/copilot_functions/: __init__.py  app.py  arm.py  client_manager.py  config.py  connector_tool_cache.py  connector_tools.py  connectors.py  mcp.py  runner.py  sandbox.py  skills.py  tools.py
src/skills/sales-products-info/: SKILL.md
src/tools/: get_article_creation_status.py  start_article_creation.py
test/: test.cloud.http
